# rust_library

./: .env  Cargo.toml
migrations/: 20240221225715_create-authors.sql  20240221231921_create-books.sql  20240221234112_create-collections.sql  20240222212338_create-make-dateofbirth.sql  20240223005606_create-update-at.sql
src/: main.rs
src/domain/: authors.rs  errors.rs
src/handler/: authors.rs
src/repositories/: authors.rs  mod.rs
src/routes/: authors.rs  mod.rs
