[package]
name = "library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
axum = "0.7.4"
chrono = { version = "0.4.34", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.197", features = ["serde_derive"] }
sqlx = { version = "0.7.3", features = [
    "postgres",
    "runtime-tokio",
    "uuid",
    "chrono",
] }
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.7.0", features = ["serde", "v4"] }
watch = "0.2.3"
